--- a/css/index.css
+++ b/css/index.css
@@ -1,13 +1,13 @@
 .blue-box{
     
-    background-image: url(../img/nath-Recurso-10.png);
+    background-image: url(../img/Recurso-30.png);
     background-size:contain;
     background-repeat: no-repeat;
 }
 
 .green-box{
     
-    background-image: url(../img/nath-Recurso-12.png);
+    background-image: url(../img/Recurso-28.png);
     background-size:contain;
     background-repeat: no-repeat;
 }
